# aoc

./: '  Cargo.toml
2020/: Cargo.toml
2020/src/day10/: main.rs
2020/src/day12/: main.rs
2020/src/day17/: main.rs
2020/src/day18/: main.rs
2020/src/day19/: main.rs
2020/src/day2/: main.rs
2020/src/day22/: main.rs
2020/src/day23/: main.rs
2020/src/day3/: main.rs
2020/src/day6/: main.rs
2020/src/day9/: input.txt  main.rs
2021/: Cargo.toml  ]
2021/src/: main.rs
2021/src/days/: day1.rs  day10.rs  day11.rs  day12.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  mod.rs
2023/: Cargo.toml
2023/src/: cubes.rs  engine_parts.rs  main.rs  scratchcards.rs  seeds.rs  trebuchet.rs
src/day1/: main.rs
src/day1.2/: main.rs
src/day10/: main.rs
src/day11/: main.rs
src/day12/: main.rs
src/day13/: main.rs
src/day14/: input-sample2.txt  input-sample3.txt  main.rs
src/day15/: main.rs
src/day16/: main.rs
src/day19/: input-cycle.txt  input-sample.txt  input-sample2.txt
src/day2/: main.rs
src/day2.2/: main.rs
src/day20/: main.rs  main2.rs
src/day21/: main.rs
src/day24/: main.rs
src/day3/: main.rs
src/day3.2/: main.rs
src/day4/: input-sample-invalid.txt  main.rs
src/day5/: main.rs
src/day7/: main.rs
src/day8/: main.rs
