[package]
name = "advent_of_code_2020"
version = "0.1.0"
authors = ["Jk Jensen <azjkjensen@gmail.com>"]
edition = "2018"

[[bin]]
name = "day1"
path = "src/day1/main.rs"

[[bin]]
name = "day1-2"
path = "src/day1.2/main.rs"

[[bin]]
name = "day2"
path = "src/day2/main.rs"

[[bin]]
name = "day2-2"
path = "src/day2.2/main.rs"

[[bin]]
name = "day3"
path = "src/day3/main.rs"

[[bin]]
name = "day3-2"
path = "src/day3.2/main.rs"

[dependencies]
eyre = "0.6.3"
regex = "1.4.2"
